--- a/daepan/7주차.md
+++ b/daepan/7주차.md
@@ -292,19 +292,63 @@ ADSL과 FTTH는 전통적인 HDLC 기반의 PPP 프레임을 지원하지 않습
 BAS에서 사용자의 ID와 패스워드를 입력하는 로그인 기능과 더불어 **터널링** 활용하여 패킷을 운반하는 기능이 있습니다.
 
 터널링이란?
-사용자와 네트워크 사이에 가상의 통신 경로를 생성하여 특정 프로토콜의 트래픽을 다른 프로토콜 위에 캡슐화하여 전송하는 기술을 말한다.
-
-BAS와 Provider의 라우터 사이에 있는 ADSL/FTTH 접속 서비스 사업자의 네트워크 안에 터널을 만듭니다.(?)
+하나의 네트워크 프로토콜이 다른 네트워크 프로토콜 내에서 캡슐화되어 전송되는 방식을 말한다. 
 
 
+BAS와 Provider의 라우터 사이에 있는 ADSL/FTTH 접속 서비스 사업자의 네트워크 안에 터널을 만듭니다.
+터널링이 되면서 캡슐화된 프로토콜은 다른 네트워크를 통과할 있게 됩니다.
 
 ### 4.3.4 액세스 회선 전체의 동작
+BAS (Broadband Access Server)는 광대역 네트워크 환경에서 사용자의 인터넷 접속을 관리하는 장치입니다. 이 서버는 사용자의 인증을 처리하고, IP 주소를 할당하며, 트래픽을 라우터로 전달하는 역할을 합니다.
 
+BAS에 대한 접근
+사용자 인증: 사용자가 인터넷에 접속하려고 할 때, BAS는 사용자의 ID와 패스워드를 검증합니다. 이 과정에서 PAP (Password Authentication Protocol)나 CHAP (Challenge Handshake Authentication Protocol) 같은 인증 프로토콜을 사용할 수 있습니다.
+
+PAP: 가장 기본적인 형태의 인증 프로토콜로, 사용자 ID와 패스워드를 텍스트 형태로 전송합니다. PAP은 간단하지만, 패스워드가 평문으로 전송되기 때문에 보안에 취약합니다.
+CHAP: 서버와 클라이언트 사이에 챌린지-응답 방식을 사용하여 인증을 수행합니다. 패스워드는 직접 전송되지 않고, 해시 값으로 변환되어 전송되기 때문에 PAP보다 보안이 강화된 방식입니다.
+IP 설정값 전달: 인증이 성공하면, BAS는 사용자에게 TCP/IP 설정값을 전달합니다. 이 설정값에는 IP 주소, 서브넷 마스크, 기본 게이트웨이, DNS 서버 주소 등이 포함됩니다.
+
+라우터로의 트래픽 전달: 사용자의 트래픽은 BAS를 통과하여 인터넷 라우터로 전달됩니다. 이 과정에서 NAT (Network Address Translation)이 수행될 수 있으며, 사용자의 프라이빗 IP 주소는 인터넷 상에서 유일한 글로벌 IP 주소로 변환됩니다.
+
+이러한 과정을 통해 사용자는 안전하게 인터넷에 접속할 수 있으며, BAS는 네트워크의 효율적인 관리와 보안을 유지하는 데 도움을 줍니다.
 
 ### 4.3.5 IP 어드레스를 할당하지 않는 언넘버드
+언넘버드(unnumbered) 인터페이스는 IP 주소를 할당받지 않는 네트워크 인터페이스를 말합니다. 
+이 방법은 주로 라우터 간의 포인트-투-포인트 링크에서 사용됩니다. 
+언넘버드 인터페이스를 사용하면 IP 주소를 절약할 수 있으며, 설정이 간단해집니다. 언넘버드 인터페이스는 주로 내부 네트워크에서 사용되며, 외부 네트워크와 통신할 때는 IP 주소가 필요합니다.
+> 이와 같은 언넘버드의 형식을 사용할 수 있는 이유는 부가하는 헤더의 값은 사전에 대부분 결정되어 있어서 </br>
+> 경로표의 기본 게이트웨이 항목에 어떤값이 들어와도 관계가 없기 때문입니다.
 
+* IP 주소 절약: 언넘버드 인터페이스를 사용하면 매 포인트-투-포인트 링크마다 IP 주소를 할당할 필요가 없어져 IP 주소를 절약할 수 있습니다.
+* 구성의 단순화: 네트워크 구성이 간단해지며, 관리가 용이해집니다. 특히 대규모 네트워크에서 이점이 더욱 도드라집니다.
+* 자동 인터페이스 구성: 언넘버드 인터페이스는 자동으로 구성될 수 있으며, 별도의 IP 주소 할당 과정 없이도 통신이 가능합니다.
+라우팅 프로토콜과의 호환성: 대부분의 라우팅 프로토콜은 언넘버드 인터페이스와 호환되어 정상적으로 작동합니다.
+
+* 장점
+  * IP 주소 효율성: IP 주소를 절약할 수 있어 IPv4 환경에서 특히 유리합니다.
+  * 네트워크 구성의 단순화: 구성이 간단해져서 관리 오버헤드가 줄어들고, 구성 오류의 가능성도 감소합니다.
+  * 스케일링의 용이성: 대규모 네트워크 확장 시 IP 주소 할당의 부담이 줄어들어 스케일링이 용이합니다.
+</br>
+
+* 단점
+  * 디버깅과 문제 해결의 어려움: IP 주소가 없기 때문에 트래픽을 추적하고 문제를 해결하는 것이 더 어려울 수 있습니다.
+  * 특정 기능과의 불호환: 일부 네트워크 기능이나 서비스는 IP 주소를 필요로 할 수 있어 언넘버드 환경에서 작동하지 않을 수 있습니다.
+  * 보안 고려사항: 언넘버드 인터페이스는 다른 인터페이스와 다르게 보안 정책을 구성할 때 주의가 필요합니다.
 
 ### 4.3.6 인터넷 접속용 라우터에서 프라이비트 주소를 글로벌 주소로 변환한다.
+사용자의 컴퓨터는 인터넷에 접속하기 위해 초기 접속 요청을 하고, 이때 사용하는 프라이비트 주소는 BAS에서 글로벌 주소로 변환되어 인터넷 상의 다른 장치와 통신할 수 있게 합니다. 이 변환 과정은 인터넷 접속용 라우터에서 이루어지며, 이를 통해 내부 네트워크의 주소와 외부 네트워크의 주소 간의 충돌을 방지하고, 보안성을 유지하면서 효율적인 통신이 가능해집니다.
 
+* 예시 통신과정
+  * 사용자의 컴퓨터는 먼저 액세스 회선을 통해 인터넷에 접속하려고 시도합니다. 이때, 사용자와 BAS 간에 TCP/IP 설정 정보가 교환됩니다.
+  * 사용자 컴퓨터(PC)는 특정 정보를 포함하는 패킷을 발송하며, 이 정보에는 프라이비트 IP 주소가 포함됩니다. 이 주소는 인터넷에서 직접 사용될 수 없기 때문에 변환이 필요합니다.
+  * 사용자 컴퓨터의 정보를 받은 BAS는 이를 처리하며, 필요한 정보를 반환합니다. 이 과정에서 프라이비트 IP 주소를 글로벌(공용) IP 주소로 변환하는 작업이 이루어집니다.
+  * 이후 사용자의 PC는 변환된 글로벌 IP 주소를 이용하여 인터넷 상의 다른 서버나 장치와 통신할 수 있게 됩니다.
 
 ### 4.3.7 PPPoE 이외의 방식
+
+PPPoE(Point-to-Point Protocol over Ethernet) 외에도 여러 가지 방법으로 인터넷에 접속할 수 있습니다. 
+
+* DHCP (Dynamic Host Configuration Protocol): IP 주소를 자동으로 할당받아 네트워크에 연결하는 방법입니다.
+* 정적 IP 주소 설정: 사용자가 직접 IP 주소, 서브넷 마스크, 게이트웨이 등의 네트워크 설정을 수행하는 방법입니다.
+* PPPoA (Point-to-Point Protocol over ATM): ATM 네트워크를 통해 포인트-투-포인트 연결을 설정하는 방법입니다.
+* PPTP (Point-to-Point Tunneling Protocol): VPN 연결을 설정하여 인터넷에 접속하는 방법입니다.
