--- a/7주차/7주차.md
+++ b/7주차/7주차.md
@@ -68,16 +68,16 @@ S는 SDSL - Symmentric (대칭형)
 - 인터넷 데이터를 고속으로 받는 (Downstream)서비스에 알맞음
 - 전화국 등 기점에서 3km 이내 인구밀집지역에 대규모로 설치하기에 유리
 - 사용가능 대역은 25Khz~2Mhz 정도이다
-    - 상향대역 240Khz~2Mhz, 하향대역 25~200Khz, POTS 대역(음성대역)0~4Khz
+    - 상향대역 240Khz~2Mhz,  하향대역 25~200Khz, POTS 대역(음성대역)0~4Khz
 - 전송속도는 거리, 선의 굵기, 사용장비에 따라 다르나,
-    - 상향속도 16Kbps~640Kbps ,하향속도 1.544Mbps~8Mbps
+    - 상향속도 16Kbps~640Kbps , 하향속도 1.544Mbps~8Mbps
 - 전화음성용 저주파 대역과 데이터전송용 광대역을 분리사용으로 음성 및 데이터 동시사용 가능
 - 단방향 고속데이터 전송과 같은 새로운 비대칭 서비스 요구를 저렴한 가격으로 제공할 수 있는 이점이 있다.
 
 변조방식
 
 - CAP(Carrierless AM/PM`)방식
-    - AT*T에서 개발한 방식으로서, 캐리어가 없는 QAM변조방식이다.
+    - AT&T에서 개발한 방식으로서, 캐리어가 없는 QAM변조방식이다.
     - 통상 상향 데이터 전송은 QPSK변조방식 사용이다.
 - DMT(Discrete Multitone)방식:ANSI 및 ETSI 표준
     - Amati사에서 개발하였다.
