--- a/7주차/7주차.md
+++ b/7주차/7주차.md
@@ -68,7 +68,7 @@ S는 SDSL - Symmentric (대칭형)
 - 인터넷 데이터를 고속으로 받는 (Downstream)서비스에 알맞음
 - 전화국 등 기점에서 3km 이내 인구밀집지역에 대규모로 설치하기에 유리
 - 사용가능 대역은 25Khz~2Mhz 정도이다
-    - 상향대역 240Khz~2Mhz, 하향대역 25 에서200Khz, POTS 대역(음성대역)0~4Khz
+    - 상향대역 240Khz~2Mhz, 하향대역 25 에서200Khz, POTS 대역(음성대역)0에서 4Khz
 - 전송속도는 거리, 선의 굵기, 사용장비에 따라 다르나,
     - 상향속도 16Kbps~640Kbps 하향속도 1.544 에서 8Mbps
 - 전화음성용 저주파 대역과 데이터전송용 광대역을 분리사용으로 음성 및 데이터 동시사용 가능
